# umbra-rs

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  justfile
bins/umbra-cli/: Cargo.toml
bins/umbra-cli/src/: main.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs  main.rs
crates/program/: Cargo.toml
crates/program/src/: error.rs  instruction.rs  lib.rs  processor.rs
crates/relayer/: Cargo.toml
crates/relayer/src/: lib.rs  main.rs
crates/system/: Cargo.toml
crates/umbra-api/: Cargo.toml
crates/umbra-api/src/: lib.rs
crates/umbra-client/src/: lib.rs
crates/umbra-core/src/: derive.rs  identity.rs  point.rs
crates/umbra-rpc/: Cargo.toml
crates/umbra-rpc/src/: memo.rs  ownership.rs  types.rs
crates/umbra-rs/: Cargo.toml
crates/umbra-rs/src/: lib.rs  program.rs
crates/umbra-rs/src/api/: mod.rs
crates/umbra-rs/src/client/: confidential.rs  mod.rs
crates/umbra-rs/src/core/: derive.rs  encryption.rs  identity.rs  mod.rs  point.rs  protocol.rs  scalar.rs  tests.rs
crates/umbra-rs/src/rpc/: memo.rs  mod.rs  ownership.rs  scanner.rs  slot_scanner.rs  slot_scanner_ui.rs  types.rs
crates/umbra-rs/src/storage/: mod.rs
crates/umbra-rs/src/sweep/: derivation.rs  executor.rs  mod.rs  planner.rs  sol.rs
crates/umbra-storage/src/: lib.rs
crates/umbra-sweep/src/: error.rs  planner.rs  sol.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: docs.md
scripts/: generate-idl.sh
src/: lib.rs
tests/: cli_test.rs  env_local.rs  program_integration.rs  umbra_full_flow.rs
tests/local/: core_roundtrip.rs  full_local_flow.rs  mod.rs  planner.rs  sweep_builder.rs
