[package]
name = "umbra"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
umbra-core = { path = "crates/umbra-core" }
umbra-rpc = { path = "crates/umbra-rpc" }
umbra-sweep = { path = "crates/umbra-sweep" }
umbra-client = { path = "crates/umbra-client" }
umbra-storage = { path = "crates/umbra-storage" }
umbra-api = { path = "crates/umbra-api" }

# dependencies needed for root-level tests
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-system-interface = { workspace = true }
curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[workspace]
members = [
    "crates/umbra-core",
    "crates/umbra-rpc",
    "crates/umbra-sweep",
    "crates/umbra-storage",
    "crates/umbra-api",
    "crates/umbra-client",
    "bins/umbra-cli",

]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Endale Dinh <endadinh@gmail.com>"]

[workspace.dependencies]
# Solana
solana-sdk = "3.0.0"
solana-client = "3.1.1"
solana-transaction-status = "3.1.1"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }

# Crypto
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }
sha2 = "0.10.9"
bs58 = "0.5.1"
rand_core = { version = "0.6.0", features = ["getrandom"] }
zeroize = { version = "1.8.2", features = ["derive"] }

# Serde / utils
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
