[package]
name = "umbra"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
umbra-rs = { path = "crates/umbra-rs" }

# dependencies needed for root-level tests
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }

curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
solana-program-test = "2.1.0"
spl-token-2022 = { workspace = true }
spl-associated-token-account = "3.0.0"
borsh = { workspace = true, features = ["derive"] }
solana-program = { workspace = true }

[workspace]
members = [
    "crates/wasm",
    "bins/umbra-cli",
    "crates/umbra-rs",
    "crates/indexer",
    "crates/relayer",
]
exclude = ["crates/program"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["0xendale <endadinh@gmail.com>"]

[workspace.dependencies]
# Solana
# Solana
solana-sdk = "2.1.0"
solana-client = "2.1.0"
solana-transaction-status = "2.1.0"
spl-token-2022 = { version = "4.0.0", default-features = false, features = [
    "zk-ops",
] }

# Crypto
curve25519-dalek = { version = "4.1.3", default-features = false, features = [
    "alloc",
    "rand_core",
    "digest",
    "serde",
    "zeroize",
] }
sha2 = "0.10.8"
bs58 = "0.5.1" 
rand_core = { version = "0.6.4", features = ["getrandom"] }
zeroize = { version = "1.7.0", features = ["derive"] } 
chacha20poly1305 = "0.10.1" 
borsh = "1.5.1"
solana-program = "2.1.0"

# Serde / utils
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
overflow-checks = true
