[package]
name = "umbra-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
umbra-rs = { path = "../umbra-rs" }
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bs58 = { workspace = true }
sha2 = { workspace = true }
base64 = "0.21"
borsh = "1.5.1"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
tracing-subscriber = { workspace = true }
