[package]
name = "umbra-relayer"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1.32", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
umbra-rs = { path = "../umbra-rs" }
anyhow = { workspace = true }
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }

