[package]
name = "umbra-system"
version = "0.1.0"
edition = "2021"

[dependencies]
umbra-indexer = { path = "../indexer" }
umbra-relayer = { path = "../relayer" }
umbra-rs = { path = "../umbra-rs" }

tokio = { version = "1.32", features = ["full"] }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
