[package]
name = "umbra-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }

solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-system-interface = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = "0.21"

umbra-core = { path = "../umbra-core" }

tracing = { workspace = true, optional = true }

[features]
default = []
logging = ["tracing"]
