[package]
name = "umbra-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Crypto (always included)
curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
hex = "0.4"
chacha20poly1305 = { workspace = true }
borsh = { workspace = true, features = ["derive"] }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Optional: Solana client (heavy deps, not for WASM)
solana-sdk = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
solana-transaction-status = { workspace = true, optional = true }
spl-token-2022 = { workspace = true, optional = true }
base64 = { version = "0.21", optional = true }

tracing = { workspace = true, optional = true }


[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
base64 = "0.21"

[features]
default = ["full"]
full = ["solana-sdk", "solana-client", "solana-transaction-status", "spl-token-2022", "base64"]
wasm = []
logging = ["tracing"]
